# rust-sfml

./: .gitignore  Cargo.toml
src/: system.rs
src/system/: clock.rs  input_stream.rs  mutex.rs  sleep.rs  time.rs  vector2.rs  vector3.rs
sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
sys/examples/: example.rs
