[package]
name = "rust-sfml"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = [
    "add",
    "add_assign",
    "as_ref",
    "deref",
    "deref_mut",
    "mul",
    "mul_assign",
] }
num = "0.4.3"
sfml-sys = { path = "sys" }

[features]
default = ["graphics", "audio"]
audio = ["sfml-sys/audio"]
graphics = ["sfml-sys/graphics"]
